--- a/run_once_before_install-packages.sh.tmpl
+++ b/run_once_before_install-packages.sh.tmpl
@@ -2,5 +2,5 @@
 
 {{- if eq .chezmoi.os "darwin" -}}
 bash -c "$(curl -fsSL https://github.com/Homebrew/install/raw/master/install.sh)"
-brew bundle --no-lock --file={{ joinPath .chezmoi.sourceDir "Brewfile" | quote }}
+brew bundle --no-lock --file={{ joinPath .sourceDir "Brewfile" | quote }}
 {{ end -}}
