add git command alias

--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -20,3 +20,7 @@
 	email = {{ .email }}
 [credential]
 	helper = manager
+[alias]
+	root = rev-parse --show-toplevel
+	current = branch --show-current
+	graph = log --graph --oneline --decorate=full --date=iso --format=\"%C(yellow)%h%C(reset) %C(magenta)[%ad]%C(reset) %C(cyan)@%an%C(reset)%C(auto)%d%C(reset) %s\"
