--- a/private_dot_npmrc.tmpl
+++ b/private_dot_npmrc.tmpl
@@ -2,3 +2,5 @@ progress=false
 init-author-email={{ .email }}
 init-author-name={{ .name }}
 init-version=0.1.0
+init-license=MIT
+strict-engines=true
