use bitwarden cli for registry.npmjs.org's access token

--- a/private_dot_npmrc.tmpl
+++ b/private_dot_npmrc.tmpl
@@ -4,3 +4,7 @@ init-author-name={{ .name }}
 init-version=0.1.0
 init-license=MIT
 strict-engines=true
+{{- if not .codespaces }}
+//registry.npmjs.org/:_authToken={{ (bitwardenFields "item" "registry.npmjs.org").token.value }}
+@kphrx:registry=https://registry.npmjs.org/
+{{- end }}
