--- a/dot_vim/pack/minpac/opt/minpac/plugin/minpac.vim.tmpl
+++ b/dot_vim/pack/minpac/opt/minpac/plugin/minpac.vim.tmpl
@@ -1,1 +1,1 @@
-{{ joinPath .chezmoi.sourceDir "minpac" "plugin" "minpac.vim" | include }}
+{{ joinPath .chezmoi.sourceDir "minpac" "plugin" "minpac.vim" | include -}}
