--- a/run_once_before_install-packages.sh.tmpl
+++ b/run_once_before_install-packages.sh.tmpl
@@ -1,10 +1,10 @@
 #!/bin/bash
 
-{{- if eq .chezmoi.os "darwin" -}}
+{{ if eq .chezmoi.os "darwin" -}}
 bash -c "$(curl -fsSL https://github.com/Homebrew/install/raw/master/install.sh)"
 brew install bitwarden-cli
 brew bundle --no-lock --file={{ joinPath .chezmoi.sourceDir "Brewfile" | quote }}
 brew autoupdate start $HOMEBREW_AUTO_UPDATE_SECS --upgrade --cleanup --sudo
-{{ end -}}
+{{- end }}
 
 bw config server https://vault.kpherox.dev
