--- a/run_once_before_install-packages.sh.tmpl
+++ b/run_once_before_install-packages.sh.tmpl
@@ -1,10 +1,16 @@
 #!/bin/bash
 
 {{ if eq .chezmoi.os "darwin" -}}
-bash -c "$(curl -fsSL https://github.com/Homebrew/install/raw/master/install.sh)"
-brew install bitwarden-cli
-brew bundle --no-lock --file={{ joinPath .chezmoi.sourceDir "Brewfile" | quote }}
-brew autoupdate start $HOMEBREW_AUTO_UPDATE_SECS --upgrade --cleanup --sudo
+bash -c "$(curl -fsSL https://github.com/Homebrew/install/raw/master/install.sh)" || exit 1
+brew bundle --no-lock --file={{ joinPath .chezmoi.sourceDir "Brewfile" | quote }} || exit 1
+brew autoupdate start $HOMEBREW_AUTO_UPDATE_SECS --upgrade --cleanup --sudo || exit 1
+
+sudo ln -sfn $(brew --prefix openjdk)/libexec/openjdk.jdk /Library/Java/JavaVirtualMachines/openjdk.jdk || exit 1
+sudo ln -sfn $(brew --prefix openjdk@21)/libexec/openjdk.jdk /Library/Java/JavaVirtualMachines/openjdk-21.jdk || exit 1
 {{- end }}
 
-bw config server https://vault.kpherox.dev
+rustup default stable || exit 1
+swiftly init --no-modify-profile --skip-install --assume-yes || exit 1
+
+bw config server https://vault.kpherox.dev || exit 1
+bw login || exit 1
